Update 2. Git으로 버전 관리.md

--- a/Git, Github/2. Git으로 버전 관리.md
+++ b/Git, Github/2. Git으로 버전 관리.md
@@ -109,8 +109,7 @@ $ git log --stat
 ※ 로그 메시지가 너무 많을 경우 화면으로 나눠서 보여줌
 
 ▶ 'enter': 다음 로그 화면으로 이동, 'Q 입력': 로그 화면 빠져나옴
-
-[##_Image|kage@b0jJOr/btqSQ52TL7y/9XODMVkGPYy21a7EBRg9R1/img.png|alignCenter|data-origin-width="0" data-origin-height="0" data-ke-mobilestyle="widthContent"|파일의 상태 변화||_##]
+![image](https://user-images.githubusercontent.com/55101567/103865062-f3fc8b80-5106-11eb-8d94-7b67055e989e.png)
 
 \- tracked: 한 번이라고 버전을 만들었던 파일 상태
 
