Update 2. Git으로 버전 관리.md

--- a/Git, Github/2. Git으로 버전 관리.md
+++ b/Git, Github/2. Git으로 버전 관리.md
@@ -14,7 +14,7 @@ $ git init
 
 -   작업트리, 스테이지, 저장소
 
-[##_Image|kage@c2hkJW/btqSLHn6Qjq/vntjlUVsFzvikug3nnsAn1/img.png|alignCenter|data-origin-width="0" data-origin-height="0" data-ke-mobilestyle="widthContent"|||_##]
+![image](https://user-images.githubusercontent.com/55101567/103865323-5e153080-5107-11eb-930c-7b05b0c118d9.png)
 
 \- 작업 트리: 우리 눈에 보이는 디렉토리, 즉 파일을 수정, 저장하는 작업 공간
 
@@ -26,7 +26,7 @@ $ git init
 
 1.  문서를 수정
 
-[##_Image|kage@cydRPX/btqSKMXxnRj/Znkd0MoYAjk9bZw0BSNUy1/img.png|alignCenter|data-origin-width="0" data-origin-height="0" data-ke-mobilestyle="widthContent"|[작업 트리]에서 문서 수정||_##]
+![image](https://user-images.githubusercontent.com/55101567/103865387-7b49ff00-5107-11eb-8b2d-2753d232940e.png)
 
 2.  수정한 파일을 스테이징하기
 
@@ -46,7 +46,7 @@ $ git status
 
 \-> '앞으로 hello.txt를 커밋할 것이다'라는 뜻
 
-[##_Image|kage@E04Tc/btqSLIm2aqe/M0YKZSI6mfJuHAJCtGFrWk/img.png|alignCenter|data-origin-width="0" data-origin-height="0" data-ke-mobilestyle="widthContent"|[작업 트리]에서 add되어 [스테이지]에 추가됨||_##]
+![image](https://user-images.githubusercontent.com/55101567/103865445-91f05600-5107-11eb-8779-bb2460145cc4.png)
 
 3.  스테이지에 올라온 파일 커밋하기
 
@@ -64,7 +64,7 @@ $ git log
 
 \-> 저장소에 저장된 모든 버전 확인
 
-[##_Image|kage@dIYsTh/btqSSdzuYAr/VAR7Aufp1NbcrXKEEVfKn0/img.png|alignCenter|data-origin-width="0" data-origin-height="0" data-ke-mobilestyle="widthContent"|commit으로 [스테이지]에 대기하던 파일이 [저장소]에 저장되면서 버전이 생성됨||_##]
+![image](https://user-images.githubusercontent.com/55101567/103865211-2dcd9200-5107-11eb-9a0a-89f3f05559d7.png)
 
 -   스테이징과 커밋 한꺼번에 하기
 
@@ -109,6 +109,7 @@ $ git log --stat
 ※ 로그 메시지가 너무 많을 경우 화면으로 나눠서 보여줌
 
 ▶ 'enter': 다음 로그 화면으로 이동, 'Q 입력': 로그 화면 빠져나옴
+
 ![image](https://user-images.githubusercontent.com/55101567/103865062-f3fc8b80-5106-11eb-8d94-7b67055e989e.png)
 
 \- tracked: 한 번이라고 버전을 만들었던 파일 상태
