Update 2. Git으로 버전 관리.md

--- a/Git, Github/2. Git으로 버전 관리.md
+++ b/Git, Github/2. Git으로 버전 관리.md
@@ -12,7 +12,7 @@ $ git init
 
 -   버전 만들기
 
--   작업트리, 스테이지, 저장소
+--   작업트리, 스테이지, 저장소
 
 ![image](https://user-images.githubusercontent.com/55101567/103865323-5e153080-5107-11eb-930c-7b05b0c118d9.png)
 
@@ -66,7 +66,7 @@ $ git log
 
 ![image](https://user-images.githubusercontent.com/55101567/103865211-2dcd9200-5107-11eb-9a0a-89f3f05559d7.png)
 
--   스테이징과 커밋 한꺼번에 하기
+--   스테이징과 커밋 한꺼번에 하기
 
 ```
 $ git commit -am "message2"
@@ -126,7 +126,7 @@ $ git log --stat
 
 -   작업 되돌리기
     
--   \[작업 트리\]에서 수정한 파일 되돌리기
+--   \[작업 트리\]에서 수정한 파일 되돌리기
     
 
 ```
@@ -135,7 +135,7 @@ $ git checkout -- hello.txt
 
 \-> 작업 트리에서 수정했던 일이 되돌려진다.
 
--   \[스테이징\] 되돌리기
+--   \[스테이징\] 되돌리기
 
 스테이징을 한 후 아래 코드 작성
 
@@ -149,7 +149,7 @@ $ git reset HEAD hello.txt
 
 \-> HEAD 뒤에 파일 이름을 지정하지 않으면 스테이지에 있는 모든 파일을 되돌린다.
 
--   최신 \[커밋\] 되돌리기
+--   최신 \[커밋\] 되돌리기
 
 ```
 $ git reset HEAD^
@@ -159,7 +159,7 @@ $ git reset HEAD^
 
 \-> HEAD^: 현재 HEAD가 가리키는 브랜치의 최신 커밋
 
--   특정 커밋으로 되돌리기
+--   특정 커밋으로 되돌리기
 
 ```
 $ git reset --hard 원하는 커밋의 해시
@@ -171,7 +171,7 @@ $ git reset --hard 원하는 커밋의 해시
 
 ※ '원하는 커밋의 해시'를 A라 하면, A을 최근 커밋으로 리셋한다. 즉, A를 삭제하는 것이 아니라 A 커밋 이후에 만들었던 커밋을 삭제한다.
 
--   커밋 삭제하지 않고 되돌리기
+--   커밋 삭제하지 않고 되돌리기
 
 ```
 $ git revert 취소하고 싶은 커밋의 해시
